assets/stylesheets/babble.scss
/* Icon styles */
.babble-icon {
  position: relative;
}

/* Dropdown styles */

.babble-title h4 {
  display: inline-block;
  padding-right: 8px;
  margin: 0;
  line-height: 20px;
  @media (max-width: 700px) {
    font-size: 17px;
    line-height: 35px;
  }
}

.babble-title i {
  color: #ccc;
}

.babble-context-toggle {
  position: relative;
  outline: 0;
  text-align: center;
  display: inline-block;
  line-height: 20px;
  @media (max-width: 700px) { line-height: 35px; }
  vertical-align: top;
  z-index: 1;
  &:hover .babble-context-toggle-tooltip { opacity: 1; }
}

.babble-context-toggle-tooltip {
  opacity: 0;
  transition: .5s opacity;
  pointer-events: none;
  position: absolute;
  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
  background: #fefefe;
  font-size: 13px;
  line-height: 18px;
  color: black;
  padding: 5px;
  word-wrap: normal;
  min-width: 150px;
  left: 50%;
  top: 100%;
  transform: translate(-50%, 0);
  &:after {
    content: ' ';
    width: 7px;
    height: 7px;
    top: 0;
    left: 50%;
    transform: rotate(45deg) translate(-50%, 0);
    position: absolute;
    background: #fefefe;
  }
}

@-moz-document url-prefix() {
  .babble-context-toggle-tooltip {
    top: 25px;
  }
}

/* Post styles */
.babble-posts {
  width: 100%;
  overflow: auto;
  height: 500px;
}

.babble-empty-topic-message {
  color: #ccc;
  text-align: center;
  padding: 25% 0;
}

.babble-post-container .row {
  margin-right: 12px;
}

.babble-post {
  clear: both;
}

.babble-post-user-deleted {
  .babble-post-avatar, .babble-post-body, .post-date, .babble-post-actions button { opacity: 0.5 }
  .cooked { font-size: 11px; }
}

.babble-post-staff-deleted {
  display: none;
}

.babble-post-actions button {
  float: right;
  background: none;
  color: $tertiary;
  display: block;
  margin: 0;
  padding: 0 3px;
  i.fa { margin: 0; }
}

.babble-post-actions .dropdown-menu {
  bottom: inherit;
  width: inherit;
  left: inherit;
  right: 0;
  a { font-weight: bold; }
}

.babble-post:last-of-type .babble-post-actions .dropdown-menu {
  bottom: -15px;
}

.babble-post .babble-post-avatar a,
.babble-post .post-date {
  background-color: transparent !important; /* sorry mom. */
}

.babble-post-staged {
  opacity: .5;
}

.babble-post:hover, .babble-available-topic:hover {
  background-color: #f8f8ff;
}

.babble-post-content {
  display: table-cell;
  vertical-align: top;
}

.babble-post-content .post-info {
  width: 32px;
  text-align: right;
}

.babble-last-read-post-message {
  font-size: 8px;
  line-height: 10px;
  padding: 0 10px 0 5px;
  float: right;
}

li.babble-post .babble-post-content a.mention {
  display: inline;
  padding: 0;
}

.babble-post-avatar img {
  float: left;
  width: 20px;
  height: 20px;
  margin: 5px 5px 0 0;
}

.babble-post-body {
  padding-top: 5px;
  width: 100%;
  max-width: 225px;
}

.babble-post-info {
  padding-top: 5px;
}

.babble-post-meta-data {
  padding-top: 5px;
}

.babble-post .post-info {
  display: inline-block;
}

.babble-post .post-date {
  padding: 5px 0 0 0;
}

.babble-post .read-state {
  position: static;
  display: inline-block;
}

/* Available topic styles */
.babble-available-topics {
  padding-top: 10px !important; /* sorry mom. */
}

.babble-available-topic {
  line-height: 35px;
  cursor: pointer;
  font-weight: bold;
  padding-left: 15px;
  @media (max-width: 700px) {
    padding: 10px 20px;
  }
}

.babble-available-topic button {
  color: #888;
}

/* Composer styles */

.babble-post-composer {
  position: relative;
  margin-right: 2px;
  text-align: right;
}

.babble-post-composer .autocomplete {
  left: 15% !important;
  width: 70%;
  text-align: left;

  span.username {
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 60%;
  }

  span.name {
    float: right;
    width: inherit !important;
    max-width: 28%;
  }
}

.babble-post-composer textarea {
  width: 100%;
  box-sizing: border-box;
  padding: 7px 21px 7px 7px;
  margin: 0;
  resize: none;
  min-height: 75px;
}

.babble-post-composer .is-editing textarea {
  min-height: inherit;
}

.babble-post-composer button.emoji {
  position: absolute;
  top: 2px;
  right: -2px;
  color: #555;
  cursor: pointer;
  background: transparent;
  @media (max-width: 700px) {
    font-size: 18px;
    right: -5px;
  }
}

.babble-post .babble-post-body .cooked img {
  max-width: 223px; /* 12 extra px for Edge, don't ask... */
  height: auto;
}

.babble-composer .btn-primary {
  margin: 3px 1px;
}

.babble-composer-editing-buttons {
  margin: 5px 0;
  button { padding: 3px 6px; }
}

.babble-composer-error-message {
  color: red;
  font-size: 10px;
  padding-right: 10px;
}

.babble-create-post {
  float: none;
}

/* Dropdown styles */

.babble-menu {
  .slide-in { // styles for slide-in menu
    box-sizing: border-box;
    height: 100vh !important;
  }
  .drop-down { // styles for drop-down menu
    .panel-body {
      height: auto !important;
    }
    .babble-posts {
      max-height: 300px;
    }
  }
}

.babble-menu .panel-body {
  overflow: hidden;
  width: 100%;
}

/* Discourse overrides */

.babble-chat button.normalized {
  background: transparent;
  border: 0;
  @media (max-width: 700px) {
    padding: 0 5px;
    &.for-chat { padding: 8px 10px; }
    font-size: 17px;
  }
}

